--- a/index.html
+++ b/index.html
@@ -1,4 +1,22 @@
-Hello, My name is Ani
-My pronouns are They/Them
-I'm obsessed with cats and video games
-I love the Band Ghost
+<!DOCTYPE html>
+<html lang="en">
+  <head>
+    <meta charset="UTF-8">
+    <title>Exercise 2</title>
+  </head>
+  <body>
+    <h1>Exercise 2</h1>
+
+    <h2>Ani Carol - "You're beauty never ever scared me" - Ghost </h2>
+
+    <li><a href="index.html">Zoo</a></li>
+    <li><a href="teeth.html">Teeth</a></li>
+    <li><a href="eyes.html">Eyes</a></li>
+    <li><a href="posters.html">Posters</a></li>
+
+    <img src="Zoo.gif" alt="A picture of a Black Panther on a sign for the Brookland Zoo">
+
+    <p>The picture shows a sign for the Brookland Zoo with Black Panther. The words Federal Art Project are at the bottom of the page</p>
+
+
+
