--- a/Portfolio/MainPage.html
+++ b/Portfolio/MainPage.html
@@ -3,16 +3,19 @@
 <head>
 	<meta charset="UTF-8">
 	<title>Ani Carol - Game Design Portfolio</title>
+	<link rel="stylesheet" href="https://use.typekit.net/fnb7flv.css">
 	<link href="portfolio.css" rel="stylesheet" type="text/css">
+	<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.4/font/bootstrap-icons.css">
+	<link rel="stylesheet" href="https://use.typekit.net/rno1rfv.css">
 </head>
 <body>
 	<div id="wrapper">
 		<header>
 			<h1>Ani Carol <br> Game Designer</h1>
 			<div class="links">
-			<a href="#">Gmail</a></h1><br>
-			<a href="#">Twitter</a></h1><br>
-			<a href="#">Resume</a></h1>
+			<a href="#" class="bi bi-envelope"> E-Mail</a></a></h1><br>
+			<a href="#" class="bi bi-twitter"> Twitter</a></h1><br>
+			<a href="#" class="bi bi-file-earmark-person"> Resume</a></h1>
 		</div>
 		</header>
 		<nav>
@@ -25,6 +28,10 @@
 			<aside>
 				<img src="face.jpg" alt="Picture of Ani Carol">
 				<p> Lorem ipsum dolor sit, amet consectetur adipisicing elit. Nulla, ipsum iste harum aliquid animi eligendi consectetur. Lorem ipsum dolor sit amet consectetur adipisicing elit. Doloribus voluptatum tempore, qui modi quo accusantium non quisquam sapiente dolorum maxime delectus debitis. Hic ullam aut, incidunt nulla quae soluta illo.</p>
+
+				<audio controls autobuffer autoplay >
+					<source src="Depeche Mode - Enjoy the Silence.mp3" type="audio/mpeg">
+				</audio>
 			</aside>
 		</nav>
 		<main>
