--- a/Portfolio/MainPage.html
+++ b/Portfolio/MainPage.html
@@ -20,10 +20,10 @@
 		</header>
 		<nav>
 			<ul>
-				<li><a href="#">Games</a></li>
-				<li><a href="#">Web Design</a></li>
-				<li><a href="#">Concept Art</a></li>
-				<li><a href="#">About Me</a></li>
+				<li><a href="games.html">Games</a></li>
+				<li><a href="web.html">Web Design</a></li>
+				<li><a href="concept.html">Concept Art</a></li>
+				<li><a href="about.html">About Me</a></li>
 			</ul>
 			<aside>
 				<img src="face.jpg" alt="Picture of Ani Carol">
@@ -38,7 +38,7 @@
 			<h2>Featured Projects</h2>
 			<section>
 				<img src="critter.jpg" alt="Picture of Critter Bidder">
-				<h3><a href="#">Critter Bidder - Game Designer</a></h3>
+				<h3><a href="critterbidder.html">Critter Bidder - Game Designer</a></h3>
 			</section>
 			<section>
 				<img src="aura.jpg" alt="Picture of Aura">
