--- a/Portfolio/MainPage.html
+++ b/Portfolio/MainPage.html
@@ -13,9 +13,9 @@
 		<header>
 			<h1>Ani Carol <br> Game Designer</h1>
 			<div class="links">
-			<a href="#" class="bi bi-envelope"> E-Mail</a></a></h1><br>
-			<a href="#" class="bi bi-twitter"> Twitter</a></h1><br>
-			<a href="#" class="bi bi-file-earmark-person"> Resume</a></h1>
+				<a href="mailto:anicarol50@gmail.com" target=”_blank”  class="bi bi-envelope"> E-Mail</a></a></h1><br>
+				<a href="https://twitter.com/anistrasz" target="_blank" class="bi bi-twitter"> Twitter</a></h1><br>
+				<a href="Resume.pdf" target="_blank" class="bi bi-file-earmark-person"> Resume</a></h1>
 		</div>
 		</header>
 		<nav>
@@ -27,31 +27,24 @@
 			</ul>
 			<aside>
 				<img src="face.jpg" alt="Picture of Ani Carol">
-				<p> Lorem ipsum dolor sit, amet consectetur adipisicing elit. Nulla, ipsum iste harum aliquid animi eligendi consectetur. Lorem ipsum dolor sit amet consectetur adipisicing elit. Doloribus voluptatum tempore, qui modi quo accusantium non quisquam sapiente dolorum maxime delectus debitis. Hic ullam aut, incidunt nulla quae soluta illo.</p>
-
-				<audio controls autobuffer autoplay >
-					<source src="Depeche Mode - Enjoy the Silence.mp3" type="audio/mpeg">
-				</audio>
+				<p> Hi! I am Ani! (They/Them) I am a Junior Game Designer who is studing at Illinois State University with a major in Creative Technoliges - Game Design. I grew up loving games and knew that this is what I wanted to do with my life. I am currently going into my Second Year of College where I will learn more about creating Digital games. I have already made 3 Analog games where I focuses on creating game concepts, character art, and game mechanics.</p>
 			</aside>
 		</nav>
 		<main>
 			<h2>Featured Projects</h2>
 			<section>
-				<img src="critter.jpg" alt="Picture of Critter Bidder">
-				<h3><a href="critterbidder.html">Critter Bidder - Game Designer</a></h3>
+				<a href="critterbidder.html"><img src="critter.jpg" alt="Picture of Critter Bidder"></a>
+				<h3 class="mph3"><a href="critterbidder.html">Critter Bidder - Game Designer</a></h3>
 			</section>
 			<section>
-				<img src="aura.jpg" alt="Picture of Aura">
-				<h3><a href="#">Aura - Group Leader</a></h3>
+				<a href="aura.html"><img src="aura.jpg" alt="Picture of Aura"></a>
+				<h3 class="mph3"><a href="aura.html">Aura - Group Leader</a></h3>
 			</section>
 			<section>
-				<img src="finalgirl.jpg" alt="Picture of Final Girl">
-				<h3><a href="#">Final Girl - Concept Artist</a></h3>
+				<a href="final.html"><img src="finalgirl.jpg" alt="Picture of Final Girl"></a>
+				<h3 class="mph3"><a href="final.html">Final Girl - Concept Artist</a></h3>
 			</section>
 		</main>
-		<footer>
-
-		</footer>
 	</div>
 </body>
 </html>
