--- a/Portfolio/about.html
+++ b/Portfolio/about.html
@@ -13,9 +13,9 @@
 		<header>
 			<h1><a href=MainPage.html>Ani Carol <br> Game Designer</a></h1>
 			<div class="links">
-			<a href="#" class="bi bi-envelope"> E-Mail</a></h1><br>
-			<a href="#" class="bi bi-twitter"> Twitter</a></h1><br>
-			<a href="#" class="bi bi-file-earmark-person"> Resume</a></h1>
+				<a href="mailto:anicarol50@gmail.com" target=”_blank”  class="bi bi-envelope"> E-Mail</a></a></h1><br>
+				<a href="https://twitter.com/anistrasz" target="_blank" class="bi bi-twitter"> Twitter</a></h1><br>
+				<a href="Resume.pdf" target="_blank" class="bi bi-file-earmark-person"> Resume</a></h1>
 		</div>
 		</header>
 		<nav>
@@ -25,9 +25,27 @@
 				<li><a href="concept.html">Concept Art</a></li>
 				<li><a href="about.html">About Me</a></li>
 			</ul>
+
+			<aside>
+				<h3 class="uniqueh3">Skills</h3>
+				<ul>
+					<li class="uniqueli">HTML</li>
+					<li class="uniqueli">Adobe Photoshop</li>
+					<li class="uniqueli">Basic Phyton</li>
+					<li class="uniqueli">Unity</li>
+				</ul>
+			</aside>
 		</nav>
-        
         <main>
+			<h2>About Me</h2>
+			<img id="selfie" src="face2.png" alt="Picture of Ani Carol">
+			<p> I have had a passion for gaming for as long as I can remember. I remember playing Pokemon Black as a kid and that was when I decided that I wanted to make something as beautful as that game would have lasting effects on my childhood. <br>
+			My journey to become a Game Designer started in High School when I took my first ever coding classes where I learned Basic Phyton and HTML. I also started learning how to design levels in those classes in Roblox where I used basic coding. These early classes really gave me reasurence that this was the path for me. I had so much fun in these classes, I remember looking forward to these classes everyday, working and experimenting on my projects in and out of class. <br>
+			The next stop on my journey was college. I began to attend Illinois State University in 2022 where I learned the majority of the skills I have today. My passion only growing as I pursed my higher education. I started working on Analog games, learning how to craft fun mechanics and create unique character concepts. Even though I am only in my first year, I feel I have already made immese progress that will only make me better and better at making games and hopefully inspire other people just like how Pokemon Black inspired me.
+			</p>
+
+			<h3 class="uniqueh2">Contact Me </h3>
+			<iframe src="https://docs.google.com/forms/d/e/1FAIpQLSeKIeJ68ruXfk53Y4LWYkI6DIhKYVGGUVkYkUxF6z90J5nYUw/viewform?embedded=true" width="630" height="800" frameborder="0" marginheight="0" marginwidth="0">Loading…</iframe>
 
         </main>
     </div>
