--- a/Portfolio/final.html
+++ b/Portfolio/final.html
@@ -41,27 +41,23 @@
 			</ul>
 		</nav>
         <main>
-			<h2>Critter Bidder</h2>
-			<img src="critter.jpg" alt="Picture of Critter Bidder">
+			<h2>Final Girl</h2>
+			<img src="finalgirl.jpg" alt="Picture of Final Girl">
 
 			<h3>Summery</h3>
-			<p>A chaotic bidding style game where players take on the roll of 8 different animals which are connect to a specific color. Each player will then try to collect 9 total cards with the same color as their animal. Players will have to trade with other players by saying how many cards they want to trade. The game has no rounds and anyone can go whenever they want. There is a phase system where every minute a new restriction is added onto the players.</p>
+			<p>A 5 player game straight out of a 80s slasher film were 4 players play as victims who are trapped in a murder circus. They must use their wits and special skills to escape while another player who plays as one of the murderous circus preformers hunting them down. The victims will have to collect items while suriving a hand full of traps that are littered all around the circus grounds. </p>
 
 			<h3>Role on the Team</h3>
-			<p>In the group, I had the role of Game Designer and Group Mediator. I contributed to the game by coming up with the theme of players taking the role of animals. I also helped come up with a lot of the mech	anics of the game such as the phase system and the limitations it will apply. I also came up with the story and world prompt. </p>
+			<p>In the group, I had the role of Character Artist and Concept Artisst. I contributed by creating the player character cards and the overall aesthetic of the game and its setting. I also was was part of the team which created the mechanics such as how players win the game and how </p>
 
 			<h3>Project Pictures</h3>
 			<div class="f-carousel" id="myCarousel">
-				<div class="f-carousel__slide"> <a href="cb1.jpg" data-fancybox="gallery" data-caption="Critter Bidder Cards spread on a table after a game"><img src="cb1.jpg" alt="Critter Bidder Cards spread on table after a game"></a></div>
-
-				<div class="f-carousel__slide"><a href="cb2.jpg" data-fancybox="gallery" data-caption="Picture of a game in progress"><img src="cb2.jpg" alt="Picture of a game in progress"></a></div>
-
-				<div class="f-carousel__slide"><a href="cb3.jpg" data-fancybox="gallery" data-caption="Picture of another game in progress"><img src="cb3.jpg" alt="Picture of another game in progress"></a></div>
-
-				<div class="f-carousel__slide"><a href="cb4.jpg" data-fancybox="gallery" data-caption="Picture of a players hand during a game"><img src="cb4.jpg" alt="Picture of a players hand of Critter Bidder Cards"></a></div>
-
-				<div class="f-carousel__slide"><a href="cb5.jpg" data-fancybox="gallery" data-caption="Picture of Critter Bidder set up to be played"><img src="cb5.jpg" alt="Picture of Critter Bidder set up to be played"></a></div>
+                <div class="f-carousel__slide"> <a href="fg1.jpg" data-fancybox="gallery" data-caption="Picture of a Game in progress"><img src="fg1.jpg" alt="Picture of a game in progress"></a></div>
+				<div class="f-carousel__slide"><a href="fg2.jpg" data-fancybox="gallery" data-caption="Picutre of a game set up"><img src="fg2.jpg" alt="Picture of a game set up"></a></div>
+				<div class="f-carousel__slide"><a href="fg3.jpg" data-fancybox="gallery" data-caption="Picture of another Game in Progress"><img src="fg3.jpg" alt="Picture of another Game in Progress"></a></div>
 			  </div>
+
+            
 
 			<script>   
 				Fancybox.bind("[data-fancybox]", {
