--- a/Portfolio/games.html
+++ b/Portfolio/games.html
@@ -13,9 +13,9 @@
 		<header>
 			<h1><a href=MainPage.html>Ani Carol <br> Game Designer</a></h1>
 			<div class="links">
-			<a href="#" class="bi bi-envelope"> E-Mail</a></h1><br>
-			<a href="#" class="bi bi-twitter"> Twitter</a></h1><br>
-			<a href="#" class="bi bi-file-earmark-person"> Resume</a></h1>
+				<a href="mailto:anicarol50@gmail.com" target=”_blank”  class="bi bi-envelope"> E-Mail</a></a></h1><br>
+				<a href="https://twitter.com/anistrasz" target="_blank" class="bi bi-twitter"> Twitter</a></h1><br>
+				<a href="Resume.pdf" target="_blank" class="bi bi-file-earmark-person"> Resume</a></h1>
 		</div>
 		</header>
 		<nav>
@@ -29,18 +29,18 @@
         <main>
 			<h2>Games</h2>
 			<section>
-				<img src="critterthumb.jpg" alt="Picture of Critter Bidder">
+				<a href="critterbidder.html"><img src="critterthumb.jpg" alt="Picture of Critter Bidder"></a>
 				<h3><a href="critterbidder.html">Critter Bidder - Game Designer</a></h3>
 				<p>A chaotic whimsical card game, where players play a colorful cast of forest creatures trying their best to collect items in a fast paced, aution style game.</p>
 			</section>
 			<section>
-				<img src="aurathumb.jpg" alt="Picture of Aura">
-				<h3><a href="#">Aura - Group Leader</a></h3>
+				<a href="aura.html"><img src="aurathumb.jpg" alt="Picture of Aura"></a>
+				<h3><a href="aura.html">Aura - Game Director</a></h3>
 				<p>A strategy based free-for-all card where players play as Witches trying to summon and make a pact with a demon while sabotaging the other players.</p>
 			</section>
 			<section>
-				<img src="finalgirlthumb.jpg" alt="Picture of Final Girl">
-				<h3><a href="#">Final Girl - Concept Artist</a></h3>
+				<a href="final.html"><img src="finalgirlthumb.jpg" alt="Picture of Final Girl"></a>
+				<h3><a href="final.html">Final Girl - Concept Artist</a></h3>
 				<p>A 4v1 asymetrical board game with an 80s asetheitc that tasks 4 players to work together to escape a evil circus while another player plays as a murderous circus preformer.</p>
 			</section>
         </main>
