--- a/Portfolio/aura.html
+++ b/Portfolio/aura.html
@@ -41,27 +41,29 @@
 			</ul>
 		</nav>
         <main>
-			<h2>Critter Bidder</h2>
-			<img src="critter.jpg" alt="Picture of Critter Bidder">
+			<h2>Aura</h2>
+			<img src="aura.jpg" alt="Picture of Aura">
 
 			<h3>Summery</h3>
-			<p>A chaotic bidding style game where players take on the roll of 8 different animals which are connect to a specific color. Each player will then try to collect 9 total cards with the same color as their animal. Players will have to trade with other players by saying how many cards they want to trade. The game has no rounds and anyone can go whenever they want. There is a phase system where every minute a new restriction is added onto the players.</p>
+			<p>An strategy based free-for-all deathmatch card game where players play as witches trying to summon a demon. Players must search around a abandon house with the rumor of containing ingredients for a demon summoning ritual. Players must collect these items but they will have to battle other witches by using spells to steal and gather different ingredients to win.</p>
 
 			<h3>Role on the Team</h3>
-			<p>In the group, I had the role of Game Designer and Group Mediator. I contributed to the game by coming up with the theme of players taking the role of animals. I also helped come up with a lot of the mech	anics of the game such as the phase system and the limitations it will apply. I also came up with the story and world prompt. </p>
+			<p>In the group, I had the role of Game Director, Game Designer, and Character Artist. I ended up taking up a leader like role in the group as I was the one who originally came up with the initial idea. I help decided on the main mechanics of the game as well as creating the story prompt for the game. I was also in charge of creating the character concept art.</p>
 
 			<h3>Project Pictures</h3>
 			<div class="f-carousel" id="myCarousel">
-				<div class="f-carousel__slide"> <a href="cb1.jpg" data-fancybox="gallery" data-caption="Critter Bidder Cards spread on a table after a game"><img src="cb1.jpg" alt="Critter Bidder Cards spread on table after a game"></a></div>
+                <div class="f-carousel__slide"><a href="a2.jpg" data-fancybox="gallery" data-caption="Picture of a game in progress"><img src="a2.jpg" alt="Picture of a game in progress"></a></div>
 
-				<div class="f-carousel__slide"><a href="cb2.jpg" data-fancybox="gallery" data-caption="Picture of a game in progress"><img src="cb2.jpg" alt="Picture of a game in progress"></a></div>
+				<div class="f-carousel__slide"><a href="a3.jpg" data-fancybox="gallery" data-caption="Picture of a game set up to be played"><img src="a3.jpg" alt="Picture of a game set up"></a></div>
 
-				<div class="f-carousel__slide"><a href="cb3.jpg" data-fancybox="gallery" data-caption="Picture of another game in progress"><img src="cb3.jpg" alt="Picture of another game in progress"></a></div>
+				<div class="f-carousel__slide"><a href="a4.jpg" data-fancybox="gallery" data-caption="Picture of all the player character cards"><img src="a4.jpg" alt="Picture of all the player character cards"></a></div>
 
-				<div class="f-carousel__slide"><a href="cb4.jpg" data-fancybox="gallery" data-caption="Picture of a players hand during a game"><img src="cb4.jpg" alt="Picture of a players hand of Critter Bidder Cards"></a></div>
-
-				<div class="f-carousel__slide"><a href="cb5.jpg" data-fancybox="gallery" data-caption="Picture of Critter Bidder set up to be played"><img src="cb5.jpg" alt="Picture of Critter Bidder set up to be played"></a></div>
+				<div class="f-carousel__slide"> <a href="a5.jpg" data-fancybox="gallery" data-caption="Picture of another game in progress"><img src="a5.jpg" alt="Picture of another game in progress"></a></div>
+				
+				<div class="f-carousel__slide"><a href="a1.jpg" data-fancybox="gallery" data-caption="Picture of the Aura game board"></a><img src="a1.jpg" alt="A picture of the Aura game board"></div>
 			  </div>
+
+            
 
 			<script>   
 				Fancybox.bind("[data-fancybox]", {
