--- a/Portfolio/web.html
+++ b/Portfolio/web.html
@@ -4,7 +4,7 @@
 	<meta charset="UTF-8">
 	<title>Ani Carol - Game Design Portfolio</title>
 	<link rel="stylesheet" href="https://use.typekit.net/fnb7flv.css">
-	<link href="portfolio.css" rel="stylesheet" type="text/css">
+	<link href="selection.css" rel="stylesheet" type="text/css">
 	<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.4/font/bootstrap-icons.css">
 	<link rel="stylesheet" href="https://use.typekit.net/rno1rfv.css">
 </head>
@@ -13,9 +13,9 @@
 		<header>
 			<h1><a href=MainPage.html>Ani Carol <br> Game Designer</a></h1>
 			<div class="links">
-			<a href="#" class="bi bi-envelope"> E-Mail</a></h1><br>
-			<a href="#" class="bi bi-twitter"> Twitter</a></h1><br>
-			<a href="#" class="bi bi-file-earmark-person"> Resume</a></h1>
+				<a href="mailto:anicarol50@gmail.com" target=”_blank”  class="bi bi-envelope"> E-Mail</a></a></h1><br>
+				<a href="https://twitter.com/anistrasz" target="_blank" class="bi bi-twitter"> Twitter</a></h1><br>
+				<a href="Resume.pdf" target="_blank" class="bi bi-file-earmark-person"> Resume</a></h1>	
 		</div>
 		</header>
 		<nav>
@@ -28,7 +28,12 @@
 		</nav>
         
         <main>
-
+			<h2>Web Design</h2>
+			<section>
+				<a href="eeao.html"><img src="wd1.jpg" alt="Picture of The Everything Bagel from EEAO"></a>
+				<h3><a href="eeao.html">Everything Everywhere All at Once Website.</a></h3>
+				<p>A Simple Website showcasing my work using basic and advanced HTML and CSS that I submited in my Web Design Class as my mid-term.</p>
+			</section>
         </main>
     </div>
 </body>
