--- a/Portfolio/MainPage.html
+++ b/Portfolio/MainPage.html
@@ -27,7 +27,7 @@
 			</ul>
 			<aside>
 				<img src="face.jpg" alt="Picture of Ani Carol">
-				<p> Hi! I am Ani! (They/Them) I am a Junior Game Designer who is studing at Illinois State University with a major in Creative Technoliges - Game Design. I grew up loving games and knew that this is what I wanted to do with my life. I am currently going into my Second Year of College where I will learn more about creating Digital games. I have already made 3 Analog games where I focuses on creating game concepts, character art, and game mechanics.</p>
+				<p> Hi! I am Ani! (They/Them) I am a Junior Game Designer who is studing at Illinois State University with a major in Creative Technoliges - Game Design. I grew up loving games and knew that this is what I wanted to do with my life. I am currently going into my Senior Year of College. I have already made 3 Analog games as well as working on 2 games in Unreal and Unity currently. During my time at ISU I have learned about creating game concepts, game systems, game mechanics and player experience..</p>
 			</aside>
 		</nav>
 		<main>
